assets/css/style_menu.css
html {
  font-size: 16px;
}

#banner {
  /*width: 100%;*/
  height: 21rem;
  background-image: url('../img/menu_jumbotron1.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#banner h1 {
  margin-bottom: -15%;
  font-size: 5rem;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  color: white;
  background: rgba(0, 0, 0, 0.5)
}

.menu_category_text {
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  margin-left: 13%;
}

.menu_item{
  font-family: 'Quicksand';
  font-size: 0.8rem;
}

.menu_subcategory {
  font-family: 'Quicksand';
  font-size: 1rem;
  font-weight: 600;
}

.menu_intro {
  font-family: 'Quicksand';
  font-size: 1rem;
  margin: 2% 15% 2% 15%;
}

.btn_order {
  text-align: center;
}

.menu_category {
  float: right;
  /*border: 3px solid red;*/
  width: 70%;
}

.category_intro {
  margin-left: 0;
}

.justify-content-center h4 {
  font-family: 'Raleway', sans-serif;
  font-size: 1.5rem;
}

.justify-content-center h6 {
  font-family: 'Raleway', sans-serif;
  font-size: 1rem;
  font-weight: 400;
}

.justify-content-center p {
  font-family: 'Quicksand', sans-serif;
  line-height: 10%;
  font-size: 1.1rem;
  letter-spacing: 0em;
  font-weight: 700;
}

.text-center span {
  font-family: 'Nanum Pen Script', cursive;
  font-size: 2.5rem;
  font-weight: 600;
}




@media only screen and (max-width: 480px), (orientation: portrait) {
    /* ruleset for width less than 480px (mobile users) */
  html {
  font-size: 12px;
  }

  #banner h1 {
    width: 75%;
    font-size: 3.8rem;
  }

  .menu_content {
  font-family: 'Quicksand';
  font-size: 0.7rem;
  }

  .menu_intro {
  font-family: 'Quicksand';
  font-size: 0.75rem;
  margin: 2% 15% 2% 15%;
  }

  .container p {
  font-family: 'Quicksand', sans-serif;
  line-height: 10%;
  font-size: 0.75rem;
  letter-spacing: 0em;
  font-weight: 700;
  }

  .menu_category {
  float: left;
  margin-left: 16%;
  }

  .category_intro {
  margin-left: 20%;
  font-size: 0.55rem;
  }

  .container p {
  font-family: 'Quicksand', sans-serif;
  font-size: 0.7rem;
  font-weight: 700;
  }

  .text-center span {
  margin: 0 0 5% 0;
  font-size:1.8rem;
  }

  .menu_category_text {
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  margin-left: 25%;
  }
}


@media only screen and (min-width: 480px), (orientation: landscape) {
    /* ruleset for width more than 480px (non mobile users) */
  .menu_content_jerky {
  margin-left: -3%;
  }

  .menu_content_frozen {
  margin-left: 12%;
  }
}

